# MatrixProject

./: CMakeLists.txt  LICENSE  Readme.md  main.cpp
include/: DenseMatrix.h  Matrix.h  SparseMatrix.h
src/: DenseMatrix.cpp  SparseMatrix.cpp  main.cpp
src/matrix/: DenseMatrix.cpp  DenseMatrix.h  Matrix.h  Operation.cpp  Operation.h  SparseMatrix.cpp  SparseMatrix.h
src/solvers/: GaussSeidelSolver.cpp  GaussSeidelSolver.h  RedBlackGaussSeidelSolver.cpp  RedBlackGaussSeidelSolver.h  SolverFactory.cpp  SolverFactory.h  SolverStrategy.h
